[package]
name = "Turkey"
version = "0.0.0"
edition = "2021"
describtion = "A two-key indexed database for python written in rust."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "turkey"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
