[build-system]
build-backend = "maturin"
requires = ["maturin>=1.3,<2.0"]

[project]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
name = "turkey"
requires-python = ">=3.7"

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.black]
exclude = '''
    /(
        \.eggs/|
        \.git/|
        \.hg/|
        \.mypy_cache/|
        \.tox/|
        \.venv/|
        _build/|
        buck-out/|
        build/|
        dist/
    )
'''
include = '\.pyi?$'
line-length = 88
